--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@
 
 @font-face {
   font-display: swap; 
-  font-family: 'ABeeZee';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./assets/fonts/abeezee-v22-latin-regular.woff2') format('woff2'); 
+  font-family: 'Archivo';
+  font-style: italic;
+  font-weight: 600;
+  src: url('../../2-homework/src/assets/fonts/archivo-v24-latin-regular.woff2') format('woff2'); 
 }
 body{
-  font-family: "ABeeZee", sans-serif;
+  font-family: "Archivo", sans-serif;
+  background-color: #3AAF9F;
 }
 
 .containers{
